# ArisSim

./: .clocconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_NEW.md  changelog.md  package.txt  requirements.txt  tips.txt
cmake_macros/: base.cmake
demo/: CMakeLists.txt
demo/demo_middleware_collision/: CMakeLists.txt
demo/demo_model_init/: CMakeLists.txt
demo/demo_server_controller_sensor/: CMakeLists.txt  main.cpp
demo/demo_server_integrator_dynamics/: CMakeLists.txt  main.cpp
demo/demo_server_sensor_root/: CMakeLists.txt
demo/demo_simulation/arm_fall/: CMakeLists.txt  main.cpp
demo/demo_simulation/arm_fall/config/: sire_arm_fall.xml
demo/demo_simulation/free_fall/: CMakeLists.txt  main.cpp  test_events.cpp  test_events.hpp
demo/demo_simulation/free_fall/config/: sire_14_one_ball_fall.xml  sire_8_one_ball_fall.xml  sire_8_three_ball_fall.xml  sire_balls_free_fall.xml  sire_template.xml
demo/demo_simulation/three_part/: CMakeLists.txt  main.cpp  simulation_with_action.cpp  test_events.cpp  test_events.hpp
demo/demo_simulation/three_part/config/: sire_problem.xml  sire_template.xml
demo/demo_simulation/two_part_fall/: CMakeLists.txt  main.cpp
demo/demo_simulation/two_part_fall/config/: sire_template.xml  sire_three_part_fall.xml
include/sire/core/: base_factory.hpp  constants.hpp  contact_pair_manager.hpp  handler_base.hpp  module_base.hpp  nice_type_name.hpp  sire_decl_def_macro.hpp  sire_log.hpp  string_utils.hpp  timer.hpp  trigger_base.hpp
include/sire/core/geometry/: box_geometry.hpp  box_shape.hpp  geometry_base.hpp  geometry_on_part.hpp  mesh_geometry.hpp  mesh_shape.hpp  shape_base.hpp  shape_calculator.hpp  sphere_geometry.hpp  sphere_shape.hpp
include/sire/middleware/: sire_middleware.hpp
include/sire/physics/: physics_engine.hpp
include/sire/physics/collision/: collision_detection.hpp  collision_filter.hpp
include/sire/physics/common/: motion_force.hpp
include/sire/physics/contact/: contact_solver_result.hpp  continuous_force_contact_solver.hpp
include/sire/physics/geometry/: box_collision_geometry.hpp  collidable_geometry.hpp  mesh_collision_geometry.hpp  sphere_collision_geometry.hpp
include/sire/plan/: display3d_init_cmd.hpp  sim_play.hpp  sim_reset.hpp
include/sire/server/: interface.hpp  meshcat.hpp  meshcat_types.hpp  rgba.hpp
include/sire/simulator/: events.hpp  simple_event_manager.hpp  simulation_loop.hpp  simulation_result.hpp  simulator_base.hpp
scripts/data_processing/plot/: plot.ipynb
scripts/tools/build_scripts/: build.py  build_all.py  build_aris.py  build_fcl.py  build_sire.py  build_third_parties.py  build_uuid.py
scripts/tools/build_scripts/build_in_linux/: build_all.sh  build_sire.sh
scripts/tools/build_scripts/cmake/: __init__.py  cmake.py  cmake_utils.py  env.py  log.py  msvc.py  test.py
src/core/: contact_pair_manager.cpp  force_screw.cpp  nice_type_name.cpp  prop_map.cpp
src/core/geometry/: box_geometry.cpp  box_shape.cpp  geometry_base.cpp  geometry_on_part.cpp  mesh_geometry.cpp  mesh_shape.cpp  shape_base.cpp  shape_calculator.cpp  sphere_geometry.cpp  sphere_shape.cpp
src/middleware/: sire_middleware.cpp
src/physics/: physics_engine.cpp  utils.cpp
src/physics/collision/: collision_detection.cpp  collision_filter.cpp  penetration_as_point_pair_callback.cpp
src/physics/common/: motion_force.cpp
src/physics/contact/: continuous_force_contact_solver.cpp  stiffness_damping_contact_solver.cpp
src/physics/geometry/: box_collision_geometry.cpp  collidable.cpp  collidable_geometry.cpp  mesh_collision_geometry.cpp  sphere_collision_geometry.cpp
src/plan/: display3d_init_cmd.cpp  execute_real_time_test_cmd.cpp  get_cmd.cpp  sim_play.cpp  sim_reset.cpp  sire_get.cpp  sire_get_debug.cpp
src/server/: api.cpp  base64.cpp  base64.hpp  meshcat.cpp  mongoose.c  rgba.cpp
src/simulator/: dynamic_simulator.cpp  events.cpp  simple_event_manager.cpp  simulation_loop.cpp  simulation_result.cpp  simulator_base.cpp
test/: CMakeLists.txt
test/model/: screw_test.cpp
test/physics/collision/: physics_engine_test.cpp
tests/: CMakeLists.txt
trash/: dynamic_simulator.cpp  dynamic_simulator.hpp  event_manager.cpp  event_manager.hpp  simple_event_manager.cpp  simple_event_manager.hpp
trash/demo_duan_cam_backend/: CMakeLists.txt
web_interface/: .env  .eslintignore  .eslintrc.js  .prettierignore  README.md  craco.config.js  package.json  tsconfig.json  tsconfig.paths.json
web_interface/public/: index.html  inflate.min.js  three.min.js
web_interface/src/: README.md  index.tsx  routes.tsx  serviceWorker.ts  store.ts  utils.ts
web_interface/src/components/: CreateCellModal.js  Dashboard.js  DashboardEmpty.js  Layout.js  LayoutCell.js  LayoutCellHeader.js  LayoutCellMenu.js  LayoutRenderer.js  README.md  ResultError.js
web_interface/src/containers/: App.js  AppBake.js  ConfigurationPage.js  DashboardPage.js  Footer.js  Header.js  README.md  explain
web_interface/src/containers/locale/: enUS.js  zhCN.js
web_interface/src/ethercat/: Device.js  EthercatController.js  EthercatMaster.js  EthercatMotor.js  EthercatSlave.js  FileGeometry.js  GeometryPooolElement.js  Model.js  Part.js  PartPoolElement.js  Pdo.js  PdoEntry.js  README.md  SlavePoolObject.js  SyncManager.js  SyncManagerPoolObject.js  Vendor.js  XMLJSONBase.js
web_interface/src/shared/: README.md
web_interface/src/shared/cells/: CellBase.js  Logger.js  ManualSwitch.js  ModelConfigeration.js  README.md  RobotStatus.js  SetDH.js  SimulationController.js  ToolCalib.js  Unknown.js  index.js
web_interface/src/shared/icons/: Wifi.js
web_interface/src/state/: README.md  actions.ts  api.ts  constants.ts  reducers.ts  sagas.ts  selectors.ts  websocket.ts
web_interface/src/style/: index.less  index_blue.less
web_interface/src/style/color/: colorPalette.less  colors.less
web_interface/src/style/components/: Dashboard.less  DashboardEmpty.less  index.less
web_interface/src/style/containers/: App.less  Footer.less  Header.less  index.less
web_interface/src/types/: env.d.ts  lib.d.ts
(+96 files in other folders)
